# schema2struct

./: .gitignore  Cargo.toml  README.md
create_json_schema_struct_macro/: Cargo.toml
create_json_schema_struct_macro/src/: lib.rs
examples/: 1.rs  basic.rs  complex.rs
jsonschema_macros/: Cargo.toml
jsonschema_macros/src/: lib.rs
schema2struct_macros/: Cargo.toml
schema2struct_macros/src/: lib.rs
src/: checkers.rs  generator.rs  lib.rs  models.rs  parsers.rs  try_from_impls.rs
