[package]
name = "jsonschema"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing", "printing"]}
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
paste = "1"

jsonschema_macros = { path = "./jsonschema_macros" }
